--- a/twentythirteen-www-tg/Less/global.less
+++ b/twentythirteen-www-tg/Less/global.less
@@ -7,9 +7,13 @@
 .site,
 .navbar {max-width:none;}
 
-a {text-decoration: underline;
-   &:hover, 
-       &:focus {text-decoration: underline;}
+a,
+.entry-content a {
+    text-decoration: underline;
+    color:@grey-lighter;
+    &:hover, 
+        &:focus {text-decoration: underline;}
+    &:hover {color: #D61119;}
 }
 
 .main-navigation {
@@ -258,7 +262,7 @@ header {a {text-decoration: none;}}
 .entry-summary,
 .entry-meta {
     max-width: 960px;
-    padding: 0 10px;
+    padding: 50px 30px 0 30px ;
 }
 
 
