Page offer: drawing pricing table

--- a/twentythirteen-www-tg/style.less
+++ b/twentythirteen-www-tg/style.less
@@ -9,6 +9,7 @@
 @import "Less/page-Front-page.less";
 @import "Less/page.less";
 @import "Less/page-Contact.less";
+@import "Less/page-Offer.less";
 
 // Sprites: fichier .less généré par Glue
 @import "Front-page.less";
