--- a/twentythirteen-www-tg/Less/global.less
+++ b/twentythirteen-www-tg/Less/global.less
@@ -6,7 +6,7 @@
 // kill max-width 1600 
 .site,
 .navbar {max-width:none;}
-
+.entry-content {color: #666;}
 a,
 .entry-content a {
     text-decoration: underline;
@@ -262,7 +262,7 @@ header {a {text-decoration: none;}}
 .entry-summary,
 .entry-meta {
     max-width: 960px;
-    padding: 50px 30px 0 30px ;
+    padding: 30px 30px 0 30px ;
 }
 
 
