--- a/twentythirteen-www-tg/Less/page-Offer.less
+++ b/twentythirteen-www-tg/Less/page-Offer.less
@@ -8,10 +8,7 @@
 #saas {
     .my-font-size(18); //18px
     .my-line-height(22); //22px
-    padding : 20px 0 20px 0;
-    h2, 
-    h3, 
-    p {color: #666;}
+
     h2 {
         .my-font-size(28); 
         .my-line-height(36); 
@@ -20,13 +17,7 @@
         .my-font-size(23); 
         .my-line-height(30); 
     }
-    li {
-        /*        display: inline-block;
-                vertical-align: top;*/
-        padding: 15px;
-        list-style-type: none;
-        /*        width: 300px;*/
-    }
+    li {list-style-type: none;}
     a {
         color: #fff;
         text-decoration: none;
@@ -34,13 +25,21 @@
     }
 }
 
-
 .contact_us {
-    .my-font-size(30); //30px
-    .my-line-height(45); //45px
+    .my-font-size(25); //30px
+    .my-line-height(35); //45px
     font-weight:bold;
     padding: 10px 20px 6px;
-    position: relative;
+    margin-bottom: 30px;
+}
+
+.small_button {
+    display:inline-block;
+    vertical-align: middle;
+    font-family: montserrat;
+    color: @button-color;   
+    border-radius: 3px;
+    text-decoration: none;
 }
 
 .type {
@@ -50,14 +49,27 @@
     text-align: center;
 }
 
-.project {
-    border-radius: 5px 5px 0 0;
-}
+.project {border-radius: 5px 5px 0 0;}
 
-.lower_column {
+.top_cell {
     border-top: 20px solid #fff;
     height: 60px;
 }
+
+.bottom_cell {
+    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+}
+
+.button_cell {
+    padding: 30px 0 0 0;
+    height: 60px;
+}
+
+.padding_cell {
+    padding-top: 0;
+    padding-bottom: 20px;
+}
+
 
 .left_shadow {box-shadow: -3px 0 4px -4px #000000 inset;}
 .righ_shadow {box-shadow: 3px 0 4px -4px #000000 inset;}
@@ -65,25 +77,68 @@
 tr,
 th,
 td,
-table {border: 0;}
+table {
+    border: 0;
+    text-transform: none;
+    font-weight: normal;
+}
 
 td {
-    min-width : 200px;
+    width : 150px;
     height : 40px;
     text-align: center;
 }
 
+.n_a:before {
+    content:"--";
+    text-align: center;
+    color : rgba(0, 0, 0, 0.3);
+}
+
+.tick_cell {color: #468847;}
+
+.number_cell {
+    .my-font-size(24); 
+    .my-line-height(26);
+}
+
+.small_number_cell {
+    .my-font-size(16); 
+    .my-line-height(18);
+}
+
+.symbol_cell {
+    .my-font-size(32); 
+    .my-line-height(34);
+}
+
+
 table {
     .my-font-size(18); //18px
     .my-line-height(22); //22px
-    margin: 35px 0 70px 0;
+    margin: 35px 0 0 0;
 }
+
+.table_contact_us {
+    .my-font-size(14);
+    .my-line-height(20);
+    .linear-gradient (@gradient-red-start; @gradient-red-end);
+    border-bottom: 2px solid #A00 ;
+    font-weight:bold;
+    padding: 5px 10px 3px;
+}
+
+.table_try_it {
+    .my-font-size(14);
+    .my-line-height(20);
+    .linear-gradient (#666; #666);
+    border-bottom: 2px solid #666;
+    font-weight:bold;
+    padding: 5px 10px 3px;
+}
+
 
 /**
  * 11.0 Media Queries
  * -----------------------------------------------------------------------------
  */
-
-@media (max-width: 953px) {
-
-}  
