page offers : make the pricing table a11y

--- a/twentythirteen-www-tg/Less/page-Offer.less
+++ b/twentythirteen-www-tg/Less/page-Offer.less
@@ -25,6 +25,7 @@
         .my-line-height(36); 
     }
     h3 {
+        margin: 0;
         .my-font-size(23); 
         .my-line-height(30); 
     }
@@ -110,7 +111,7 @@ td {
     color : rgba(0, 0, 0, 0.3);
 }
 
-.tick_cell {color: #468847;}
+.tick_cell {color: #147E10;}
 
 .number_cell {
     .my-font-size(24); 
