--- a/twentythirteen-www-tg/Less/page-Front-page.less
+++ b/twentythirteen-www-tg/Less/page-Front-page.less
@@ -12,6 +12,8 @@
 
 .center {text-align: center;}
 
+.align-right {text-align: right;}
+
 .sprite-center {
     margin-left: auto;
     margin-right: auto;
