--- a/twentythirteen-www-tg/style.less
+++ b/twentythirteen-www-tg/style.less
@@ -1,6 +1,23 @@
-//@import url("../twentythirteen/style.css");
+/*
+Theme Name:     Twenty Thirteen Child for WWW.Tanaguru.com
+Theme URI:      TBD
+Author:         Matthieu Faure
+Author URI:     http://www.tanaguru.com/
+Description:    Theme dedicated to WWW.Tanaguru.com based on theme Twenty Thirteen 
+Version:        1.0.0
+License:        GNU General Public License v2 or later
+License URI:    http://www.gnu.org/licenses/gpl-2.0.html
+Tags:           black, brown, orange, tan, white, yellow, light, one-column, two-columns, right-sidebar, flexible-width, custom-header, custom-menu, editor-style, featured-images, microformats, post-formats, rtl-language-support, sticky-post, translation-ready
+Text Domain:    wwwtg
+Template:       twentythirteen
 
-@import "Less/style.less"; // Style.css du thème parent
+This theme, like WordPress, is licensed under the GPL.
+Use it to make something cool, have fun, and share what you've learned with others.
+*/
+
+@import url("../twentythirteen/style.css");
+
+// @import "Less/style.less"; // Style.css du thème parent
 @import "Less/bits.less";
 @import "Less/mixins.less";
 @import "Less/fonts.less";
