--- a/twentythirteen-blog-tg/style.css
+++ b/twentythirteen-blog-tg/style.css
@@ -149,10 +149,10 @@ h6 {
   padding-bottom: 30px;
 }
 .site-logo {
-  width: 150px;
+  width: 100%;
   display: inline-block;
   vertical-align: middle;
-  max-width: 100%;
+  max-width: 150px;
 }
 .site-title {
   padding: 0 10px;
