Site : maj du logo

--- a/twentythirteen-www-tg/Less/global.less
+++ b/twentythirteen-www-tg/Less/global.less
@@ -165,7 +165,7 @@ a,
 
 #logo {
     float: left;
-    margin: 25px 0 0 0;
+    margin: 15px 0 0 0;
 
     a {
         .my-font-size(30); //30px
@@ -180,6 +180,16 @@ a,
         .my-font-size(30); //30px
         .my-line-height(45); //45px
         color: @grey-darker; 
+    }
+
+    img,
+    span {
+      display: inline-block;
+      vertical-align: middle;
+    }
+
+    img {
+      width: 70px;
     }
 }
 
