--- a/twentythirteen-www-tg/style.less
+++ b/twentythirteen-www-tg/style.less
@@ -27,6 +27,7 @@ Use it to make something cool, have fun, and share what you've learned with othe
 @import "Less/page.less";
 @import "Less/page-Contact.less";
 @import "Less/page-Offer.less";
+@import "Less/page-References.less";
 
 // Sprites: fichier .less généré par Glue
 @import "Front-page.less";
