MAJ css de la page Offres

--- a/twentythirteen-www-tg/Less/page-Offer.less
+++ b/twentythirteen-www-tg/Less/page-Offer.less
@@ -44,6 +44,11 @@
     margin-bottom: 30px;
 }
 
+
+.infinite {
+    font-size: 2em;
+}
+
 .type {
     background-color: #4d4d4d;
     font-weight : normal;
@@ -70,7 +75,7 @@
 }
 
 .button_cell {
-    padding: 30px 0 0 0;
+    padding: 30px 3px 0;
     height: 60px;
 }
 
@@ -96,10 +101,10 @@ table {
     font-weight: normal;
 }
 
-th {padding: 0 10px 0 10px;}
+th {padding: 10px;}
 
 td {
-    width : 150px;
+    width : 120px;
     height : 40px;
     text-align: center;
     padding: 6px 10px 6px 6px;
@@ -129,11 +134,14 @@ td {
 }
 
 table {
-    .my-font-size(18); //18px
-    .my-line-height(22); //22px
+    .my-font-size(15); //16px
+    .my-line-height(17); //18px
     margin: 35px 0 0 0;
 }
 
+caption {
+    text-align: center;
+}
 
 .small_button {
     display:inline-block;
@@ -145,7 +153,7 @@ table {
 }
 
 #button_cell_color {
-    padding: 30px 0 0 0;
+    padding: 30px 3px 0;
     height: 60px;
     a {
         color: #4d4d4d;
