--- a/twentythirteen-blog-tg/style.css
+++ b/twentythirteen-blog-tg/style.css
@@ -323,6 +323,7 @@ h6 {
   font-family: montserrat;
   font-weight: bold;
   color: #4d4d4d;
+  text-decoration: none;
 }
 
 #logo h1 {
@@ -613,3 +614,11 @@ header a {
     min-height: 250px;
   }
 }
+
+/* ====================
+      COMMENT FORM
+ =====================*/ 
+
+ .comment-respond {
+  font-size: 1.6rem;
+ }
