--- a/twentythirteen-blog-tg/style.css
+++ b/twentythirteen-blog-tg/style.css
@@ -423,7 +423,7 @@ h6 {
   margin: 0 0 0 0;
 }
 
-@media screen and (max-width: 770px) {
+/**@media screen and (max-width: 770px) {
   #page_title {
     position: absolute;
     top: 35px;
@@ -442,7 +442,7 @@ h6 {
   #page_title_filter {
     width: 20rem;
   }
-}
+}**/
 
 /* ====================
       NAVIGATION
